--- a/.github/workflows/main_cedal.yml
+++ b/.github/workflows/main_cedal.yml
@@ -44,13 +44,11 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+          path: .next
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
