--- a/.github/workflows/main_cedal.yml
+++ b/.github/workflows/main_cedal.yml
@@ -27,14 +27,11 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: .next
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,11 +41,10 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
         with:
           name: node-app
-          path: .next
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
