--- a/.github/workflows/main_cedal.yml
+++ b/.github/workflows/main_cedal.yml
@@ -54,3 +54,4 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_240093B4DAB14D21ADFF91F02CC2F2EC }}
           package: .
+          if: false
