--- a/.github/workflows/main_cedal.yml
+++ b/.github/workflows/main_cedal.yml
@@ -53,5 +53,5 @@ jobs:
           app-name: 'cedal'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_240093B4DAB14D21ADFF91F02CC2F2EC }}
-          package: .
+          package: .next
           if: false
